service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api01-service
spec:
  selector:
    app: api01
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
