ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api01-ingress
spec:
  rules:
  - host: api.test.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api01-service
            port:
              number: 80
